# Yet-Another-Rust-Parser

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
parser/: Cargo.toml
parser/src/: iter.rs  lib.rs  parser.rs  syntax.rs
parser_generator/: Cargo.toml
parser_generator/src/: lib.rs
parser_generator/tests/: main.rs
tokenizer/: Cargo.toml
tokenizer/src/: dfa.rs  lib.rs  nfa.rs  tokenizer.rs
tokenizer/src/tokenizer/: iter.rs
tokenizer_generator/: Cargo.toml
tokenizer_generator/src/: lib.rs
tokenizer_generator/tests/: main.rs  normal.rs  with.rs
